fix layout and add comments and variables Add more comments to index.html and styles.css, fix layout issues. Add variables to root in css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 :root {
-    --bg-color-main: #F9F2ED;
-    --bg-color-aside: #1363DF;
+    --bg-color-main: #DFF6FF;
+    --bg-color-aside: #5463FF;
+    --bg-color-search: hsla(201, 100%, 80%, 0.5);
+    --bg-color-btn: #7FB5FF;
+    --bg-color-cards: #FFF9F9;
+    --text-btn-color: #FFF9F9;
+    --text-color: #495478;
+    --gradient: linear-gradient(#5463FF, #FFF89A);
+    --gradient-btn: linear-gradient(#FFF89A,#FFF89A);
+    --shadow-box: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     font-size: 16px;
 }
 
@@ -9,6 +17,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+input {
+    border: none;
 }
 
 body {
@@ -21,7 +32,7 @@ body {
 }
 
 .icons.header {
-    filter: invert(29%) sepia(96%) saturate(1541%) hue-rotate(203deg) brightness(88%) contrast(99%);;
+    filter: invert(39%) sepia(88%) saturate(3844%) hue-rotate(226deg) brightness(104%) contrast(107%);
 }
 
 .icon-btn {
@@ -29,7 +40,8 @@ body {
 }
 .container{
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 0.5fr 3fr 1fr;
+    grid-template-rows: auto 1fr;
 }
 
 /* header */
@@ -41,7 +53,7 @@ body {
     gap: 15px;
     padding: 1rem 2rem;
     font-weight: 600;
-    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--shadow-box);
 }
 
 .search-container {
@@ -56,8 +68,7 @@ body {
     align-self: center;
     flex: 1;
     border-radius: 15px;
-    border: none;
-    background-color: #C6DCE4;
+    background-color: var(--bg-color-search);
     height: 1.5rem;
 }
 
@@ -71,7 +82,7 @@ body {
 .user-img,
 .avatar {
     width: 75px;
-    background-color: yellow;
+    background-color: #FFF89A;
     border-radius: 50%;
 }
 
@@ -111,8 +122,8 @@ body {
 }
 .header-btn {
     flex: 1;
-    color: #F9F2ED;
-    background-color: #1363DF;
+    color: var(--text-btn-color);
+    background-color: var(--bg-color-aside);
     border: none;
     border-radius: 1rem;
     height: 35px;
@@ -126,9 +137,12 @@ body {
     grid-row: 1/4;
     display: grid;
     grid-template-rows: auto auto 1fr;
-    background-color: #1363DF;
-    color: #F9F2ED;
+    background-color: var(--bg-color-aside);
+    color: var(--text-btn-color);
     gap: 1.5rem;
+    position: sticky;
+    top: 0;
+    height: 100vh;
 }
 
 .logo-img {
@@ -148,37 +162,41 @@ body {
 
 .nav-network {
     grid-row: 2/3;
-    row-gap: 1rem;
 }
 
 .nav-settings {
     grid-row: 3/4;
 }
+
 /* sidebar-links */
+
 .nav-links {
     display: flex;
     align-items: center;
     gap: 1rem;
     padding: 1rem;
-    text-shadow: 1px 1px 5px #000;
+    text-shadow: 1px 1px 10px #000;
 }
-
 
 .nav-links a {
     text-decoration: none;
-    color: #F9F2ED;
+    color: var(--text-btn-color);
     font-weight: 400;
     transition: .3s ease all;
-    border-bottom: 1px solid transparent;
+    background-image: var(--gradient-btn);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
 }
 
 .nav-links:hover {
     transform: scale(1.05);
-    transition: transform 0.3s;
+    transition: transform .3s;
 }
 
 .nav-links a:hover {
-    border-color: #F9F2ED;
+    background-size: 100% 2px;
 }
 
 
@@ -186,12 +204,17 @@ body {
 
 
 .content-container {
+    overflow: auto;
     grid-column: 2/4;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    gap: 1rem;
+    gap: 2rem;
     padding: 1rem;
-    background-color: #F9F2ED;
+    background-color: var(--bg-color-main);
+}
+
+.content-container p {
+    color: var(--text-color);
 }
 
 /* left side */
@@ -204,9 +227,8 @@ body {
 
 .projects {
     display: grid;
-    grid-template-rows: 1fr, 1fr, auto;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 .card {
@@ -214,8 +236,8 @@ body {
     gap: 1rem;
     grid-template: 1fr 0.5fr / 1rem 1fr;
     border-radius: 1rem;
-    box-shadow: 1px 1px 3px #000;
-    background-color: #Fff;
+    box-shadow: var(--shadow-box);
+    background-color: var(--bg-color-cards);
     transition: all .2s ease-in-out;
 
 }
@@ -229,13 +251,14 @@ body {
     grid-area: 1/1/3/2;
     border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem;
-    background: linear-gradient(#47B5FF, #F94C66);
+    background: var(--gradient);
 }
 
 .description {
     justify-self: start;
     align-self: start;
     padding-top: 1rem;
+    padding-right: 1rem;
 
 }
 
@@ -250,38 +273,53 @@ body {
 .card-buttons input:hover {
     transform: rotate(-180deg);
     transition: 0.5s;
-    filter: drop-shadow(-1px 1px 5px #F94C66);
 }
+
+/* right-side */
 
 .announcements-and-trendings {
-    /* grid-column: 2/3; */
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    gap: 1rem;
-    
+    gap: 2rem;
+    align-content: start;
+    font-size: 0.9rem;
 }
-
 
 .anoun-cards {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    background-color: #fff;
-    padding: 1rem;
+    padding: 1rem 2rem;
+}
+
+.box-wrapper {
+    background-color: var(--bg-color-cards);
+    border-radius: 1rem;
+    box-shadow: var(--shadow-box);
+}
+
+.horizontal-line {
+    border-bottom: 2px solid rgba(126, 131, 134, 0.5);
+    width: calc(100% - 4rem);
+    margin: auto;
 }
 
 .trending-cards {
     display: grid;
     grid-template: 1fr 1fr / auto 1fr;
-    gap: 0.5rem;
-    padding: 1rem;
-    background-color: #fff;
+    column-gap: 0.5rem;
+    row-gap: 0.2rem;
+    padding: 1rem 2rem;
 }
 
 .trending-cards img {
     grid-row: 1/3;
 }
+
 .trending-cards p:nth-child(2) {
     align-self: end;
 }
 
+.anoun-cards p:nth-child(1),
+.trending-cards p:nth-child(2){
+    color: #000;
+    font-weight: 500;
+}
